SIS/force-app/main/default/objects/Intake_Master__c/Intake_Master__c.object-meta.xml
<CustomObject>
    <label>Intake Master</label>
    <nameField>
        <displayFormat>IM-{00000}</displayFormat>
        <label>Intake Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>