SIS/force-app/main/default/objects/Intake_Master__c/fields/Application_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Application_Allowed__c</fullName>
    <label>Application Allowed</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>