SIS/force-app/main/default/objects/Intake_Master__c/fields/Course_Detail_Intake_ID__c.field-meta.xml
<CustomField>
    <fullName>Course_Detail_Intake_ID__c</fullName>
    <label>Course Detail Intake ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>