SIS/force-app/main/default/objects/Intake_Master__c/fields/CRM_Intake_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Intake_Master_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Intake Master ID</label>
    <type>Text</type>
</CustomField>