SIS/force-app/main/default/objects/Intake_Master__c/fields/CRM_Programme_Intake_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Programme_Intake_ID__c</fullName>
    <label>CRM Programme Intake ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>