SIS/force-app/main/default/objects/Intake_Master__c/fields/CRM_Programme_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Programme_Master_ID__c</fullName>
    <formula>CASESAFEID(Programme_Master__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Programme Master ID</label>
    <type>Text</type>
</CustomField>