SIS/force-app/main/default/objects/Intake_Master__c/fields/Intake_Name__c.field-meta.xml
<CustomField>
    <fullName>Intake_Name__c</fullName>
    <label>Intake Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>