SIS/force-app/main/default/objects/Intake_Master__c/fields/Intake_Number__c.field-meta.xml
<CustomField>
    <fullName>Intake_Number__c</fullName>
    <label>Intake Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>