SIS/force-app/main/default/objects/Intake_Master__c/fields/Programme_Master__c.field-meta.xml
<CustomField>
    <fullName>Programme_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme Master</label>
    <referenceTo>Programme_Master__c</referenceTo>
    <relationshipLabel>Intake Masters</relationshipLabel>
    <relationshipName>Intake_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>