SIS/force-app/main/default/objects/Intake_Master__c/fields/Study_Mode__c.field-meta.xml
<CustomField>
    <fullName>Study_Mode__c</fullName>
    <label>Study Mode</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>