SIS/force-app/main/default/objects/Intake_Master__c/validationRules/SIS_Intake_Number_Should_Be_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Intake_Number_Should_Be_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Intake_Number__c )),
  NOT(ISNUMBER( Intake_Number__c ))
)</errorConditionFormula>
    <errorMessage>Please enter a valid number.</errorMessage>
</ValidationRule>